--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-player": "^2.10.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-visibility-sensor": "^5.1.1",
     "react-waypoint": "^10.3.0",
