--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
     "react-player": "^2.10.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-scrollspy": "^3.4.3",
     "react-visibility-sensor": "^5.1.1",
-    "react-waypoint": "^10.3.0",
-    "swiper": "^8.3.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
